--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "opencode-env",
+  "name": "janus",
   "version": "0.1.0",
   "description": "Directory-based OpenCode configuration switching tool. Automatically switch between different OpenCode configurations based on your current working directory.",
   "type": "module",
   "main": "./dist/index.js",
   "bin": {
-    "opencode-env": "./dist/cli.js"
+    "janus": "./dist/cli.js"
   },
   "files": [
     "dist"
