fix: update repository URLs to match actual GitHub repo (janus)

--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kuitos/opencode-env.git"
+    "url": "https://github.com/kuitos/janus.git"
   },
   "bugs": {
-    "url": "https://github.com/kuitos/opencode-env/issues"
+    "url": "https://github.com/kuitos/janus/issues"
   },
-  "homepage": "https://github.com/kuitos/opencode-env#readme",
+  "homepage": "https://github.com/kuitos/janus#readme",
   "engines": {
     "node": ">=18.0.0"
   },
